<resources>
    <string name="app_name">Dairy Farm Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_farmer_login">Farmer Log in</string>
    <string name="add_product">Add Product</string>
    <string name="farm_product">Farm Product</string>
    <string name="price_per_unit">Price Per Unit</string>
    <string name="unit">Unit</string>
    <string name="id_number">Id Number</string>
    <string name="log_in">Log In</string>
    <string name="phone_number">phone number</string>
    <string name="farmer_login">Farmer Login</string>
    <string name="farmer_registration">Farmer Registration</string>
    <string name="view_products">Go to the market</string>
    <string name="id_number1">Id Number</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="register">Register</string>
    <string name="me_busca">Loading. . . </string>
    <string name="image">Farm Image</string>
    <string name="get_farm_products">Get Farm Products</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="welcome">Your email and telephone number will only be used to give you response and will not be shared.</string>
    <string name="enter_your_name">enter_your_name</string>
    <string name="exit">exit</string>
    <string name="farming_type">Select question type</string>
    <string name="fish_farming">Starting a dairy farm</string>
    <string name="maize_farming">Best feeding methods</string>
    <string name="Housing">Housing</string>
    <string name="question">question</string>
    <string name="submit">submit</string>
    <string name="type_your_question_here">type_your_question_here</string>
    <string name="your_email">your_email</string>
    <string name="your_phone_number">your_phone_number</string>
    <string name="farmer_login1">Farmer Login</string>
    <string name="farmer_registration1">Farmer Registration</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="view_products1">View Products</string>
    <string name="follow_us_on_twitter">follow us on twitter</string>
    <string name="make_farming_query">make Farming Query</string>
    <string name="logo">Be smart logo</string>
    <string name="name_sample">Enter image description</string>
    <string name="imagetoupload">Image To Upload</string>
    <string name="choose_image">Choose Image</string>
    <string name="select">Take a picture</string>
    <string name="Seller_name">Seller Name</string>
    <string name="tel">Tel</string>
    <string name="prod">Product</string>
    <string name="ppu">Price/Unit</string>
</resources>
