<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
       <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/farm_product"
        android:id="@+id/editTextFarmProduct"
        android:layout_marginTop="40dp"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unit"
        android:id="@+id/editTextUnit"
        android:inputType="number"
        android:layout_marginTop="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_per_unit"
        android:id="@+id/editTextUnitPrice"
       android:inputType="numberDecimal"
        android:layout_marginTop="16dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:id="@+id/buttonChoose"
         android:layout_marginTop="16dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/imagetoupload"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/editText"
        android:hint="@string/name_sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:id="@+id/buttonAddProduct"
        android:layout_marginTop="16dp"
       />

</LinearLayout>
</ScrollView>