<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_askexpert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.example.nelson.kuzaapp.Askexpert">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />
        <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_name"
        android:ems="10"
        android:id="@+id/editTextName"
        android:layout_below="@+id/welcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/textcolor"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editTextPhoneNumber"
        android:hint="@string/your_phone_number"
        android:layout_below="@+id/editTextName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textcolor"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:hint="@string/your_email"
        android:layout_below="@+id/editTextPhoneNumber"
        android:layout_alignRight="@+id/editTextPhoneNumber"
        android:layout_alignEnd="@+id/editTextPhoneNumber" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLocation"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentLeft="true"
        android:hint="@string/enter_your_location"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextEmail"
        android:layout_alignEnd="@+id/editTextEmail" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/farming_type"
        android:id="@+id/textView2"
        android:textColor="@color/textcolor"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/editTextLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignRight="@+id/editTextName"
        android:layout_alignEnd="@+id/editTextName"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView2"
         >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fish_farming"
            android:id="@+id/radioButtonFish"
            android:checked="false"
            android:textColor="@color/textcolor"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maize_farming"
            android:id="@+id/radioButtonMaize"
            android:checked="false"
            android:textColor="@color/textcolor" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Housing"
            android:id="@+id/radioButtonhousing"
            android:checked="false"
            android:textColor="@color/textcolor"
            />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/question"
        android:id="@+id/textView3"
        android:textColor="@color/textcolor"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/type_your_question_here"
        android:id="@+id/editTextQuestion"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/radioGroup"
        android:layout_alignEnd="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/splashback"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/editTextQuestion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_alignRight="@+id/editTextQuestion"
        android:layout_alignEnd="@+id/editTextQuestion"
        android:layout_alignBottom="@+id/button"
        android:textColor="@color/splashback"
        android:clickable="true"
        android:background="@color/exit"
        android:textAppearance="?android:attr/textAppearanceLarge" android:layout_below="@+id/editTextQuestion"
            />


</RelativeLayout>
